--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,2 +1,43 @@
 .container {
+	height: 100px;
+	padding: 0px 50px;
+	background-color: #d1411e;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	position: sticky;
+	top: 0;
+}
+
+.item {
+	flex: 1;
+	display: flex;
+	align-items: center;
+}
+
+.item:nth-child(2) {
+	flex: 3;
+}
+
+.callButton {
+	background-color: white;
+	border-radius: 50%;
+	padding: 10px;
+	width: 50px;
+	height: 50px;
+}
+
+.texts {
+	margin-left: 20px;
+	color: white;
+}
+
+.text:first-child {
+	font-size: 12px;
+	font-weight: 500;
+}
+
+.text:last-child {
+	font-size: 20px;
+	font-weight: bold;
 }
