--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -19,6 +19,10 @@
 	flex: 3;
 }
 
+.item:last-child {
+	justify-content: flex-end;
+}
+
 .callButton {
 	background-color: white;
 	border-radius: 50%;
@@ -40,4 +44,37 @@
 .text:last-child {
 	font-size: 20px;
 	font-weight: bold;
+}
+
+.list {
+	padding: 0;
+	display: flex;
+	align-items: center;
+	list-style: none;
+	color: white;
+}
+
+.listItem {
+	margin: 20px;
+	font-weight: 500;
+}
+
+.cart {
+	position: relative;
+}
+
+.counter {
+	position: absolute;
+	top: -10px;
+	right: -10px;
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	background-color: white;
+	padding: 3px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-weight: bold;
+	color: #d1411e;
 }
