--- a/styles/Featured.module.css
+++ b/styles/Featured.module.css
@@ -1,17 +1,19 @@
 .container {
 	height: calc(100vh - 100px);
-	background-color: #d1411e;
+	background-color: #e08b16;
 	overflow: hidden;
+	position: relative;
 }
 
 .arrowContainer {
+	cursor: pointer;
 	position: absolute;
 	width: 10%;
 	height: 20%;
 	top: 0;
 	bottom: 0;
 	margin: auto;
-	cursor: pointer;
+	z-index: 2;
 }
 
 .wrapper {
@@ -24,4 +26,5 @@
 	width: 100vw;
 	height: 100%;
 	position: relative;
+	transition: all 1.5s ease-in-out;
 }
