--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,12 +1,13 @@
 .container {
 	height: 100px;
 	padding: 0px 50px;
-	background-color: #d1411e;
+	background-color: #e08b16;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	position: sticky;
 	top: 0;
+	z-index: 999;
 }
 
 .item {
@@ -16,11 +17,16 @@
 }
 
 .item:nth-child(2) {
-	flex: 3;
+	flex: 2;
 }
 
 .item:last-child {
 	justify-content: flex-end;
+}
+
+.logo {
+	min-height: 80%;
+	min-width: 80%;
 }
 
 .callButton {
@@ -76,5 +82,5 @@
 	justify-content: center;
 	align-items: center;
 	font-weight: bold;
-	color: #d1411e;
+	color: #e08b16;
 }
