--- a/styles/ProductList.module.css
+++ b/styles/ProductList.module.css
@@ -1,2 +1,20 @@
 .container {
+	padding: 20px 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.desc {
+	font-size: 24px;
+	color: #444;
+	width: 70%;
+}
+
+.wrapper {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
 }
