--- a/styles/Order.module.css
+++ b/styles/Order.module.css
@@ -13,6 +13,41 @@
 	margin-bottom: 50px;
 }
 
+.row:last-child {
+	width: 80%;
+	display: flex;
+	justify-content: space-between;
+}
+
+.done {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.inProgress {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	animation: inProgress 1s ease infinite alternate;
+}
+
+@keyframes inProgress {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+.notDone {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	opacity: 0.3;
+}
+
 .right {
 	flex: 1;
 }
