--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -96,3 +96,47 @@
 	font-weight: 500;
 	cursor: pointer;
 }
+
+@media screen and (max-width: 480px) {
+	.container {
+		height: auto;
+		text-align: center;
+		flex-direction: column;
+		margin-top: 40px;
+	}
+
+	.imgContainer {
+		width: 50vh;
+		height: 50vh;
+	}
+
+	.title {
+		margin-top: 5px;
+	}
+
+	.sizes {
+		width: 100%;
+		padding: 0px 20px;
+		margin: 30px 0;
+	}
+
+	.ingredients {
+		flex-direction: column;
+	}
+
+	.option {
+		margin: 10px;
+		font-size: 18px;
+	}
+
+	.checkbox {
+		width: 25px;
+		height: 25px;
+	}
+
+	.quantity,
+	.button {
+		height: 50px;
+		padding: 10px 20px;
+	}
+}
