--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -1,7 +1,8 @@
 .container {
-	/* height: calc(100vh - 100px); */
+	height: calc(100vh - 100px);
 	padding: 50px;
 	display: flex;
+	padding-top: 100px;
 }
 
 .left {
@@ -62,3 +63,60 @@
 	cursor: pointer;
 	margin-top: 20px;
 }
+
+@media screen and (max-width: 786px) {
+	.container {
+		height: auto;
+	  flex-direction: column;
+	  padding: 20px;
+	}
+  
+	.table {
+	  display: flex;
+	  flex-direction: column;
+	  align-items: center;
+	  justify-content: center;
+	}
+  
+	.trTitle{
+	  display: none;
+	}
+  
+	.tr{
+	  display: flex;
+	  flex-direction: column;
+	  align-items: center;
+	  justify-content: center;
+	  margin-bottom: 20px;
+	}
+  
+	.imgContainer{
+	  width: 35vw;
+	  height: 35vw;
+	}
+  
+	.name,.total{
+	  font-size: 24px;
+	}
+  
+	.extras,.price,.quantity{
+	  font-size: 22px;
+	}
+  
+	.price::before{
+	  content: "Price: ";
+	  font-weight: 500;
+	}
+	.quantity::before{
+	  content: "Quantity: ";
+	  font-weight: 500;
+	}
+	.total::before{
+	  content: "Total: ";
+	  font-weight: 500;
+	}
+  
+	.wrapper{
+	  width: 100%;
+	}
+  }
