--- a/styles/Order.module.css
+++ b/styles/Order.module.css
@@ -1,6 +1,8 @@
 .container {
+	height: calc(100vh - 100px);
 	padding: 50px;
 	display: flex;
+	padding-top: 100px;
 }
 
 .left {
@@ -8,7 +10,7 @@
 }
 
 .table {
-	width: 100%;
+	width: 80%;
 	text-align: left;
 	margin-bottom: 50px;
 }
@@ -80,4 +82,62 @@
 	font-weight: bold;
 	cursor: not-allowed;
 	margin-top: 20px;
+}
+
+@media screen and (max-width: 786px) {
+	.container{
+		height: auto;
+		flex-direction: column;
+	}
+
+	.table{
+		width: 100%;
+	}
+
+	.trTitle{
+		display: none;
+	}
+
+	.tr{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		font-size: 20px;
+	}
+
+	.id::before{
+		content: 'Order ID: ';
+		font-weight: 500;
+	}
+
+	.name::before{
+		content: 'Customer: ';
+		font-weight: 500;
+	}
+
+	.address::before{
+		content: 'Address: ';
+		font-weight: 500;
+	}
+
+	.total::before{
+		content: 'Total: ';
+		font-weight: 500;
+	}
+
+	.row:last-child{
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+	}
+
+	.done,.notDone,.inProgress{
+		margin-bottom: 20px;
+	}
+
+	.wrapper{
+		width: 100%;
+	}
 }
