--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -42,7 +42,7 @@
 
 .wrapper {
 	width: 90%;
-	max-height: 300px;
+	/* max-height: 300px; */
 	background-color: #333;
 	padding: 50px;
 	padding-top: 10px;
