--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -57,11 +57,26 @@
 }
 
 .button {
-	height: 30px;
 	color: #e08b16;
 	font-weight: bold;
 	cursor: pointer;
 	margin-top: 20px;
+	padding: 10px 5px;
+}
+
+.paymentMethods{
+	margin-top: 10px;
+	display: flex;
+	flex-direction: column;
+}
+
+.payButton{
+	padding: 10px 5px;
+	cursor: pointer;
+	margin-bottom: 5px;
+	background-color: white;
+	color: teal;
+	font-weight: bold;
 }
 
 @media screen and (max-width: 786px) {
