--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -1,8 +1,7 @@
 .container {
-	height: calc(100vh - 100px);
 	padding: 50px;
 	display: flex;
-	padding-top: 100px;
+	margin: 100px,auto;
 }
 
 .left {
@@ -84,6 +83,7 @@
 		height: auto;
 	  flex-direction: column;
 	  padding: 20px;
+	  margin: 70px auto;
 	}
   
 	.table {
@@ -91,6 +91,7 @@
 	  flex-direction: column;
 	  align-items: center;
 	  justify-content: center;
+	  margin-bottom: 20px;
 	}
   
 	.trTitle{
