--- a/styles/ProducttList.module.css
+++ b/styles/ProducttList.module.css
@@ -1,4 +1,5 @@
 .container {
+	margin: 150px auto;
 	padding: 20px 10px;
 	display: flex;
 	flex-direction: column;
@@ -12,9 +13,10 @@
 }
 
 .wrapper {
+	margin-top: 60px;
 	width: 100%;
 	display: flex;
-	justify-content: center;
+	justify-content:center;
 	align-items: center;
 	flex-wrap: wrap;
 }
