--- a/styles/OrderDetail.module.css
+++ b/styles/OrderDetail.module.css
@@ -1,3 +1,42 @@
 .container{
-    
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(197, 197, 197, 0.57);
+}
+
+.wrapper{
+    width: 500px;
+    background-color: white;
+    border-radius:20px;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.title{
+    font-weight: 300;
+}
+
+.item{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.label{
+    margin-bottom: 10px;
+}
+
+.input{
+    height:40px;
 }
