--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -10,6 +10,10 @@
 	z-index: 999;
 }
 
+.logo{
+	cursor: pointer;
+}
+
 .item {
 	flex: 1;
 	display: flex;
@@ -18,6 +22,7 @@
 
 .item:nth-child(2) {
 	flex: 2;
+	justify-content: center;
 }
 
 .item:last-child {
