--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,3 +1,11 @@
 .container{
-    color: black;
+    height: calc(100vh - 100px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wrapper{
+    display: flex;
+    flex-direction: column;
 }
