--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -9,3 +9,20 @@
     display: flex;
     flex-direction: column;
 }
+
+.input{
+    height: 40px;
+    margin-bottom: 20px;
+    padding: 0px 10px;
+}
+
+.button{
+    height: 40px;
+    margin-bottom: 20px;
+    border: none;
+    background-color: teal;
+    color: white;
+    font-weight: 600;
+    cursor:pointer
+}
+
