--- a/styles/Add.module.css
+++ b/styles/Add.module.css
@@ -1,3 +1,15 @@
+.container{
+    width:100vw;
+    height:100vh;
+    background-color: rgba(245,240,240,0.52);
+    position:fixed;
+    top:0;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .mainAddButton{
     padding: 10px;
     margin: 20px;
