--- a/styles/Add.module.css
+++ b/styles/Add.module.css
@@ -1,3 +1,15 @@
+.mainAddButton{
+    padding: 10px;
+    margin: 20px;
+    background-color: #d1411e;
+    width: 150px;
+    border-radius: 10px;
+    color: white;
+    font-weight: 500;
+    text-align: center;
+    cursor: pointer;
+}
+
 .container{
     width:100vw;
     height:100vh;
@@ -10,14 +22,29 @@
     justify-content: center;
 }
 
-.mainAddButton{
-    padding: 10px;
-    margin: 20px;
-    background-color: #d1411e;
-    width: 150px;
-    border-radius: 10px;
+.wrapper{
+    width:500px;
+    background-color: white;
+    padding: 10px 50px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    position: relative;
+}
+
+.close{
+    width: 30px;
+    height: 30px;
+    background-color: black;
     color: white;
-    font-weight: 500;
-    text-align: center;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+
 }
