--- a/styles/Add.module.css
+++ b/styles/Add.module.css
@@ -101,7 +101,7 @@
 .addButton{
     width: 25%;
     border: none;
-    background-color: teal;
+    background-color: green;
     color: white;
     font-weight: 500;
     cursor: pointer;
